added funding ack, fixed ref 1

--- a/nwpt2023/bidirectional-analysis.bib
+++ b/nwpt2023/bidirectional-analysis.bib
@@ -16,10 +16,11 @@
 
 
 @misc{stack,
-  author = "T. Van Drunen and A. L. Hosking and Jens Palsberg",
-  title = "Reducing loads and stores in stack architectures",
-  howpublisher = "Manuscript",
-  year = 2000
+  author = "Thomas {Van Drunen} and Anthony L. Hosking and Jens Palsberg",
+  title = "Reducing Loads and Stores in Stack Architectures",
+  howpublished = "Manuscript",
+  year = 2000,
+  url = "http://web.cs.ucla.edu/~palsberg/draft/vandrunen-hosking-palsberg00.pdf"
 }
 
 
