fix: Added a reference to Henglein 1992

--- a/nwpt2023/bidirectional-analysis.bib
+++ b/nwpt2023/bidirectional-analysis.bib
@@ -93,3 +93,16 @@
 	pages = {102391},
 	file = {Jaiswal et al_2020_Bidirectionality in flow-sensitive demand-driven analysis.pdf:/home/yasuaki/Zotero/storage/V57DXWN2/Jaiswal et al_2020_Bidirectionality in flow-sensitive demand-driven analysis.pdf:application/pdf;ScienceDirect Snapshot:/home/yasuaki/Zotero/storage/6256Z9ZT/S0167642320300022.html:text/html},
 }
+
+@inproceedings{henglein_dynamic_1992,
+	address = {Berlin, Heidelberg},
+	title = {Dynamic typing},
+	isbn = {978-3-540-46803-5},
+	abstract = {We present an extension of a statically typed language with a special type dyn and explicit type tagging and checking operations (coercions). Programs in run-time typed languages are viewed as incomplete programs that are to be completed to well-typed programs by explicitly inserting coercions into them.},
+	booktitle = {{ESOP} '92},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Henglein, Fritz},
+	editor = {Krieg-Brückner, Bernd},
+	year = {1992},
+	pages = {233--253},
+}
