fix: Added a hook for G in the diagram

--- a/nwpt2023/bidirectional-analysis.tex
+++ b/nwpt2023/bidirectional-analysis.tex
@@ -145,7 +145,7 @@ order of two pointwise orders; $\Unidir(D , E) = (E \tomon D, \leq)$ is the pose
     \Bidir(D, E) & \text{all join-closed and butterfly relations} \\
     \Unidir(D, E) & \text{all join-closed and pre-down-/post-upclosed relations}
       \arrow["F"{name=F}, bend right=30, swap, from=1-1, to=2-1]
-      \arrow["G"{name=G}, bend right=30, swap, from=2-1, to=1-1]
+      \arrow["G"{name=G}, bend right=30, swap, hook, from=2-1, to=1-1]
       \arrow["H"{name=H}, bend right=30, swap, from=2-1, to=3-1]
       \arrow["I"{name=I}, bend right=30, swap, hook, from=3-1, to=2-1]
       \arrow["J"{name=J}, bend right=30, swap, from=3-1, to=4-1]
