--- a/nwpt2023/bidirectional-analysis.tex
+++ b/nwpt2023/bidirectional-analysis.tex
@@ -89,8 +89,8 @@ Bidirectional analyses also include partial redundancy elimination in the origin
 \section{Specifying analyses}
 
 We model data-flow analyses in the style of
-\cite{frade_bidirectional_2009}.  The domains of data-flow values will
-be complete lattices. % $(D, \leq, \bigjoin)$, $(E, \leq, \bigjoin)$ etc.
+\cite{frade_bidirectional_2009}.  The domains of data-flow values are
+complete lattices. % $(D, \leq, \bigjoin)$, $(E, \leq, \bigjoin)$ etc.
 % The compatibility relation of data-flow values for a single
 % instruction or a bigger program is a relation.
 If the data-flow domains for the entry and exit points of a piece of code are $(D, \leq, \bigjoin)$,
