nomenclature of Galois adjoints, at the end of the .tex file

--- a/ramics24/ramics24.tex
+++ b/ramics24/ramics24.tex
@@ -538,4 +538,22 @@ Constraint-based analysis
 
 
 
- \end{document}
+\end{document}
+
+
+Galois connections:
+
+
+             G
+Rel   <-------------  Bwd
+            T
+      -------------->
+            F
+
+
+       I            K             M
+Rel   <---  Endo   <---- Bidir  <----  Bwd
+      ---->        ---->        ----->
+       H            J             P
+
+
