started a bib file based on NWPT

--- a/ramics24/ramics24.tex
+++ b/ramics24/ramics24.tex
@@ -536,6 +536,10 @@ Constraint-based analysis
 
 
 
+\nocite{*}  % just to see all we have in the bib file
+  
+\bibliographystyle{splncs04}
+\bibliography{ramics24}  
 
 
 \end{document}
@@ -554,6 +558,6 @@ Rel   <-------------  Bwd
        I            K             M
 Rel   <---  Endo   <---- Bidir  <----  Bwd
       ---->        ---->        ----->
-       H            J             P
+       H            J             L
 
 
